# RailwayNetworkCCBS

./: CBS.cpp  CBS.h  CMakeLists.txt  const.h  heuristic.cpp  heuristic.h  main.cpp  map.cpp  map.h  sipp.cpp  sipp.h  struct.hpp  task.cpp  task.h
AgentData/: caseAgent.xml  exampleAgent.xml
MapData/: caseFig.xml  exampleMap.xml
